# hmba-stx-registration

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
notebooks/: st2block.ipynb  st2slab.ipynb
notebooks/H24.30.005/: block_processing.ipynb  stx_registration.ipynb
notebooks/QM23.50.001/: st2block.ipynb  st2slab.ipynb
src/hmba_stx_registration/: __init__.py  svg_utils.py  utils.py
src/hmba_stx_registration/block_processing/: __init__.py  background_registration.py  block_segmentation.py
src/hmba_stx_registration/st_to_block/: __init__.py
src/hmba_stx_registration/st_to_slab/: __init__.py
tests/hmba_stx_registration/: test_plot_slab_scatter.py  test_st_to_block.py  test_st_to_slab.py  test_svg_utils.py  test_utils.py
